# python-serverless-boilerplate

./: .gitignore  README.md  handler.py  manifest.yaml  package-lock.json  package.json  pyproject.toml  serverless.yml
